<resources>
    <string name="app_name">LibrosYa</string>
    <string name="email_title">Email:</string>
    <string name="email_hint">email@address.com</string>
    <string name="password_title">Contraseña:</string>
    <string name="password_hint">*************</string>
    <string name="iniciar_sesion"> Iniciar Sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="iniciar_sesion_g">Continuar con google</string>
    <string name="iniciar_sesion_fb">Continuar con facebook</string>
    <string name="Inicio">Inicio</string>

    <!--- Registro  -->

    <string name="registro_title">REGISTRARSE</string>
    <string name="registro_nombre">Nombre:</string>
    <string name="registro_nombre_hint">Pepe</string>
    <string name="registro_volver">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>