<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#312C38"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        >


        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logo"
            app:tint="#e1e1e1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/email_title"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:textAlignment="textStart">

            <EditText
                android:id="@+id/login_email"
                style="@style/input"
                android:hint="@string/email_hint" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/password_title"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="#8C8C8C"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#8c8c8c" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/iniciar_btn"
            style="@style/btn"
            android:onClick="IniciarSesion"
            android:text="@string/iniciar_sesion" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/registrar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_corner"
            android:backgroundTint="#1B1C22"
            android:drawablePadding="2dip"
            android:gravity="center"
            android:onClick="Registrarse"
            android:paddingLeft="30dp"
            android:paddingRight="26dip"
            android:singleLine="true"
            android:text="@string/Registrarse"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:backgroundTint="@color/white"
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/login_corner"
                android:drawableLeft="@drawable/ic_google_icon"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="26dip"
                android:singleLine="true"
                android:text="@string/iniciar_sesion_g" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/login_corner"
                android:backgroundTint="#3B5998"
                android:drawableLeft="@drawable/ic_facebook_logo"
                android:drawablePadding="2dip"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="26dip"
                android:singleLine="true"
                android:text="@string/iniciar_sesion_fb"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>